Created class to handle game ball

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(SOURCES 
 	src/pang.cpp 
 	src/game.cpp 
+	src/gameBall.cpp 
 	src/stdafx.cpp 
 	src/splashScreen.cpp 
 	src/mainMenu.cpp 
